--- a/index.html
+++ b/index.html
@@ -317,13 +317,7 @@
                         <tbody>
                             <tr>
                                 <td class="activity-name">Otorgamiento de crédito</td>
-                                <td><div class="radio-group"><input type="radio" name="otorgamiento" value="0" data-min="0" data-max="0"></div></td>
-                                <td><div class="radio-group"><input type="radio" name="otorgamiento" value="5" data-min="1" data-max="10"></div></td>
-                                <td><div class="radio-group"><input type="radio" name="otorgamiento" value="15" data-min="11" data-max="20"></div></td>
-                                <td><div class="radio-group"><input type="radio" name="otorgamiento" value="25" data-min="21" data-max="30"></div></td>
-                                <td><div class="radio-group"><input type="radio" name="otorgamiento" value="35" data-min="31" data-max="40"></div></td>
-                                <td><div class="radio-group"><input type="radio" name="otorgamiento" value="45" data-min="41" data-max="50"></div></td>
-                                <td><div class="radio-group"><input type="radio" name="otorgamiento" value="60" data-min="51" data-max="100"></div></td>
+                                <td colspan="7"><input type="number" name="otorgamiento" min="0" max="100" class="percent-input" /></td>
                             </tr>
                             <tr>
                                 <td class="activity-name">Seguimiento y control de cartera</td>
