--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
             <!-- Asignación de Actividades -->
             <div class="section">
                 <h2 class="section-title">Actividades y Asignación de Tiempo</h2>
-                <p><strong>Instrucciones:</strong> Complete el porcentaje de tiempo mensual que destina a cada una de las actividades
+                <p><strong>Instrucciones:</strong> Digite el porcentaje de tiempo mensual que destina a cada una de las actividades
                     listadas.
                     Los valores deben ser números enteros y la suma total debe ser igual a 100% para poder enviar el formulario.</p>
                     
@@ -410,7 +410,7 @@
                                 <td class="activity-name">Procesos específicos del cargo</td>
                                 <td colspan="7">
                                     <input type="number" name="porcentaje_especificos" id="porcentaje_especificos" min="0" max="100"
-                                        class="percent-input" placeholder="Ej. 10" />
+                                        class="percent-input"/>
                                     <input type="hidden" name="procesos_especificos" id="procesos_especificos" value="">
                                 </td>
                             </tr>
